# ml_1

./: .gitignore  Dockerfile  app.py  config.py  pyproject.toml  run.py
app/: __init__.py  routes.py
app/services/: external_service.py
